# google-test-starter-project

./: .gitignore  CMakeLists.txt  README.md  build-all.bat  build-win32.bat  build-win64.bat  build_and_test.bat  configure_vs.bat
tests/: CMakeLists.txt  SampleTest.cpp
